test/fail/inheritance/inherit_builtin.lly
#[
SyntaxError: 'Integer' cannot be inherited from.
    from inherit_builtin.lly:6
]#

class abc < Integer {  }
